Refactor components to enhance TypeScript type safety and remove unnecessary comments

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 	</head>
 
 	<body>
+		<!-- 
 		<form
 			name="contact"
 			netlify-honeypot="bot-field"
-			netlify
 			hidden
+			data-netlify="true"
+			method="post"
 		>
 			<input
 				class="form-control"
@@ -71,6 +73,7 @@
 				Submit
 			</button>
 		</form>
+		 -->
 		<div id="root"></div>
 		<script
 			type="module"
